# Time_Frequency_Waveforms

./: .buildinfo  .gitignore  GitHub.html  README.md  emri_example.html  examples.html  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  theory.html
.doctrees/: GitHub.doctree  emri_example.doctree  environment.pickle  examples.doctree  getting_started.doctree  index.doctree  theory.doctree
.doctrees/api/: TimeFrequencyWaveforms.code.TD_to_TFD_transform.doctree  TimeFrequencyWaveforms.code.doctree  TimeFrequencyWaveforms.code.utils.doctree  TimeFrequencyWaveforms.doctree  modules.doctree
.doctrees/nbsphinx/: emri_example.ipynb  getting_started.ipynb
.github/workflows/: docs.yml
_modules/: index.html
_modules/TimeFrequencyWaveforms/code/: TD_to_TFD_transform.html  utils.html
_sources/: theory.rst.txt
_sources/api/: TimeFrequencyWaveforms.code.TD_to_TFD_transform.rst.txt
api/: TimeFrequencyWaveforms.code.TD_to_TFD_transform.html  TimeFrequencyWaveforms.code.html  TimeFrequencyWaveforms.code.utils.html  TimeFrequencyWaveforms.html  modules.html
docs/source/: GitHub.rst  conf.py  emri_example.ipynb  examples.rst  index.rst  theory.rst
docs/source/_static/: custom.css
docs/source/api/: TimeFrequencyWaveforms.code.rst  TimeFrequencyWaveforms.code.utils.rst  modules.rst  (+1 more)
examples/: emri_example.ipynb  getting_started.ipynb  interp.ipynb  interp_cnm.ipynb
src/TimeFrequencyWaveforms/: __init__.py
tests/: test_TD_TFD_transform.py  test_plotting.py  test_utils.py  test_waveforms.py
(+9 files in other folders)
